--- a/style.css
+++ b/style.css
@@ -12,15 +12,14 @@
     gap: 30px;
     list-style: none;
     justify-content: center;
-    
 }
 
 .dish {
-    
     width: 200px;
     text-align: center;
     justify-items: center;
     background-color: blue;
+    position:relative;
 }
 
 img {
@@ -30,4 +29,21 @@ img {
 .box-title {
    
     text-align: center;
+}
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left:0;
+    background-color: rgba(120, 209, 231, 0.5);
+    opacity: 0;
+}
+
+.dish:hover .overlay{
+    opacity: 1;
+}
+.hover{
+    background-color: red;
 }
